plugins {
    id 'java'
    id 'application'
    id 'eclipse'
}

version = '1.3'
sourceCompatibility = '11'

new File(projectDir, "VERSION").text = version;
new File(projectDir, "src/main/resources/VERSION").text = version;

repositories {
    jcenter()
}

dependencies {
    implementation 'com.google.guava:guava:28.0-jre'

    // https://mvnrepository.com/artifact/com.google.code.gson/gson
    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'

    // https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc
    implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.30.1'

    // https://mvnrepository.com/artifact/org.tinylog/tinylog-api
    implementation group: 'org.tinylog', name: 'tinylog-api', version: '2.0.1'

    // https://mvnrepository.com/artifact/org.tinylog/tinylog-impl
    implementation group: 'org.tinylog', name: 'tinylog-impl', version: '2.0.1'
}

run {
    standardInput = System.in
}

application {
    mainClassName = 'updatetool.Main'
}

test {
    useJUnitPlatform()
}

jar {
    manifest {
        attributes "Main-Class": "updatetool.Main"
    }

    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
}